Added more tests and code cleanups